testcases/valid/empty_class.shp
class A<p1> where
    p1: [A<p1>]
{
}
