testcases/parse_error/old_bounds.shp
class Main<p1: [Main<p1>]>
{
    f1: i32;
}
